feat: add sign-in component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,34 +1,1 @@
-<p-button>Hallo</p-button>
-<h1>hier steht ein test satz</h1>
-<p>fsdfe</p>
-<h4>kdeofkweopqwekopfko</h4>
-
-<h3>
-    In our previous article we looked at the emotive considerations—how typefaces make us feel—but warned that the technical
-    considerations should be taken into account as soon as possible when choosing type. The rest of this module contains
-    articles that could be grouped as “technical considerations,” and in this article in particular, we’re going to look at
-    how those considerations make a typeface truly reliable or not. Ideally, a reliable typeface should include:
-</h3>
-
-<span
-    >In our previous article we looked at the emotive considerations—how typefaces make us feel—but warned that the technical
-    considerations should be taken into account as soon as possible when choosing type. The rest of this module contains
-    articles that could be grouped as “technical considerations,” and in this article in particular, we’re going to look at
-    how those considerations make a typeface truly reliable or not. Ideally, a reliable typeface should include:</span
->
-
-<div class="grid grid-nogutter surface-section text-800">
-    <div class="col-12 md:col-6 p-6 text-center md:text-left flex align-items-center">
-        <section>
-            <span class="block text-6xl font-bold mb-1">Create the screens your</span>
-            <div class="text-6xl text-primary font-bold mb-3">your visitors deserve to see</div>
-            <p class="mt-0 mb-4 text-700 line-height-3">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                magna aliqua.
-            </p>
-
-            <button pButton label="Learn More" type="button" class="mr-3 p-button-raised"></button>
-            <button pButton label="Live Demo" type="button" class="p-button-outlined"></button>
-        </section>
-    </div>
-</div>
+<router-outlet></router-outlet>
