style: move assets folder to app dir

--- a/src/app/core/components/sign-in/sign-in.component.html
+++ b/src/app/core/components/sign-in/sign-in.component.html
@@ -2,7 +2,7 @@
     <div class="flex flex-wrap shadow-2">
         <div class="w-full lg:w-6 px-0 py-4 lg:p-7 bg-blue-50">
             <div class="flex justify-content-center">
-                <img src="../../../../assets/images/tale-factory-logo.svg" alt="Image" height="110" class="mb-7" />
+                <img src="../../../assets/images/tale-factory-logo.svg" alt="Image" height="110" class="mb-7" />
             </div>
             <p-carousel *ngIf="CarouselContent" [value]="CarouselContent" [autoplayInterval]="4000" [circular]="true">
                 <ng-template let-CarouselContent pTemplate="item">
